Finished Parser for fourth lab and added matrix output

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ FourthLab/FourthLab/obj/Debug/net6.0/FourthLab.AssemblyInfo.cs
 FourthLab/FourthLab/obj/Debug/net6.0/FourthLab.GeneratedMSBuildEditorConfig.editorconfig
 
 FourthLab/FourthLab/obj/Debug/net6.0/FourthLab.GlobalUsings.g.cs
+
+FourthLab/FourthLab/obj/Debug/net6.0/FourthLab.csproj.BuildWithSkipAnalyzers
+
+FourthLab/FourthLab/obj/Debug/net6.0/FourthLab.csproj.FileListAbsolute.txt
