Forgot to add fifth and sixth lab

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ FourthLab/FourthLab/obj/Debug/net6.0/FourthLab.GlobalUsings.g.cs
 FourthLab/FourthLab/obj/Debug/net6.0/FourthLab.csproj.BuildWithSkipAnalyzers
 
 FourthLab/FourthLab/obj/Debug/net6.0/FourthLab.csproj.FileListAbsolute.txt
+
+FifthLab/SimplexLab/ConsoleApp1/obj/Debug/net6.0/
+
+SixthLab/NelderMead/NelderMead/obj/Debug/net6.0/
